# jnSSH2

./: Makefile.am  Makefile.in  README  autogen.sh  configure  configure.in  jnSSH2.c  makefile
f2h/: Makefile.am  Makefile.in  main.c
launcher/: Makefile.am  jnSSH2-launcher.desktop.in  jnSSH2-launcher.py
sm/: Makefile.am  Makefile.in  jnSSH2-sm.desktop  main.c  ui.glade
src/: Makefile.am  Makefile.in  main.c
