#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([jnSSH2-util], [1.0], [chrisniu1984@gmail.com])
AM_INIT_AUTOMAKE
#AC_CONFIG_SRCDIR([sm/jnSSH2-sm.c])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lssh2':
AC_CHECK_LIB([ssh2], [main])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdlib.h string.h sys/ioctl.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS([select socket])

#AC_CONFIG_FILES
AC_OUTPUT(Makefile
          f2h/Makefile
          src/Makefile
          sm/Makefile)
